cjl - Hide overflow on scene to prevent scrollbars on rotating

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -15,6 +15,7 @@ body {
     bottom: 0;
     right: 0;
     perspective: 40em;
+    overflow: hidden;
 }
 
 #scene * {
